Seperate files for each

--- a/list.html
+++ b/list.html
@@ -36,7 +36,7 @@
 
                     <tr>
                         <th>Trip</th>
-                        <th>Locations</th>
+                        <th>Arrival Location</th>
                         <th>Start Date</th>
                         <th>End Date</th>
                         <th></th>
@@ -51,7 +51,7 @@
                         <td>02/14/23</td>
                         <td>02/23/23</td>
                         <td>
-                            <a class="btn-small waves-effect waves-light" href="item.html">
+                            <a class="btn-small waves-effect waves-light" href="item1.html">
                                 <i class="material-icons right">edit</i>
                                 Info/Edit
                             </a>
@@ -68,7 +68,7 @@
                         <td>06/24/23</td>
                         <td>07/12/23</td>
                         <td>
-                            <a class="btn-small waves-effect waves-light" href="item.html">
+                            <a class="btn-small waves-effect waves-light" href="item2.html">
                                 <i class="material-icons right">edit</i>
                                 Info/Edit
                             </a>
@@ -85,7 +85,7 @@
                         <td>11/20/23</td>
                         <td>11/29/23</td>
                         <td>
-                            <a class="btn-small waves-effect waves-light" href="item.html">
+                            <a class="btn-small waves-effect waves-light" href="item3.html">
                                 <i class="material-icons right">edit</i>
                                 Info/Edit
                             </a>
@@ -109,7 +109,7 @@
                     </div>
                     
                     <div class = "Location col s6">
-                        <input placeholder="Location:" id="Location" type="text" class="validate s4">
+                        <input placeholder="Arrival Location:" id="Location" type="text" class="validate s4">
                     </div>
                     <br>
                 </div>
