--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <div class="container">
         <h1>Welcome!</h1>
         <h2>Use this to manage your travel plans</h2>
-            <a class="btn" href = "stuff.html">
+            <a class="btn" href = "list.html">
                 <i class = "material-icons right">arrow_forward</i>
                 Get Started!
             </a>
