--- a/item2.html
+++ b/item2.html
@@ -24,7 +24,7 @@
         <table>
             <tr>
                 <th>Trip Name: </th>
-                <td>France, February Break</td>
+                <td>France, Summer</td>
             </tr>
 
             <tr>
@@ -34,12 +34,12 @@
 
             <tr>
                 <th>Arrival Date: </th>
-                <td>02/14/23</td>
+                <td>06/24/23</td>
             </tr>
 
             <tr>
                 <th>End Date: </th>
-                <td>02/23/23</td>
+                <td>07/12/23</td>
             </tr>
             <tr>
                 <th>Locations to visit: </th>
@@ -62,7 +62,7 @@
                         <div class = "row">
                             <div class = "Name col s6">
                                 Trip Name:
-                                <input placeholder = "Trip Name" value="France, February Break" id="Trip Name" type="text" class="validate s1">
+                                <input placeholder = "Trip Name" value="France, Summer" id="Trip Name" type="text" class="validate s1">
                             </div>
                             
                             <div class = "Location col s6">
@@ -75,12 +75,12 @@
                         <div class = "row">
                             <div class = "Start Date col s6">
                                 Start Date:
-                                <input value="02/14/23" id="Start Date" type="text" class="validate" onfocus = "(this.type='date')">
+                                <input value="06/24/23" id="Start Date" type="text" class="validate" onfocus = "(this.type='date')">
                             </div>
         
                             <div class = "End Date col s6">
                                 <h6>End Date:</h6>
-                                <input value="02/23/23" id="End Date" type="text" class="validate" onfocus = "(this.type='date')">
+                                <input value="07/12/23" id="End Date" type="text" class="validate" onfocus = "(this.type='date')">
                             </div>                            
                             <br>
                         </div>
